--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "swiper": "^11.1.15",
     "vue": "^3.5.12",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
