--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.4",
     "pinia": "^2.2.6",
+    "primevue": "^4.2.4",
     "swiper": "^11.1.15",
     "vue": "^3.5.12",
     "vue-carousel-3d": "^1.0.1",
