--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "swiper": "^11.1.15",
     "vue": "^3.5.12",
     "vue-carousel-3d": "^1.0.1",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-carousel": "^0.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
